# active-trace

./: .gitignore  CHANGES.md  README.md  docker-compose.test.yml  docker-compose.yml  notes.md
backend/: .coverage  .env.example  Dockerfile  Dockerfile.test  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2f9d509b868a_002_auth_tables.py  4981c26ad014_tenant_and_base_models.py  a0b1c2d3e4f5_015_avisos_acknowledgment.py  a1b2c3d4e5f6_003_rbac_tables.py  a1b2c3d4e5f7_017_programas_fechas_academicas.py  a8b9c0d1e2f3_008_padron_tables.py  b1c2d3e4f5a6_009_calificaciones_tables.py  b1c2d3e4f5a6_016_tareas_internas.py  b2c3d4e5f6a7_018_liquidaciones_honorarios.py  c2d3e4f5a6b7_010_analisis_permiso.py  c3d4e5f6a7b8_019_auditoria_permiso.py  c4d5e6f7a8b9_004_audit_log.py  d0e1f2a3b4c5_020_mensajeria_interna.py  d1e2f3a4b5c6_005_estructura_academica.py  d4e5f6a7b8c9_014_comunicacion.py  e1f2a3b4c5d6_006_usuarios_y_asignaciones.py  e5f6a7b8c9d0_013_slot_encuentro_instancia_guardia.py  f1a2b3c4d5e6_007_equipos_permisos.py  f6a7b8c9d0e1_014_evaluaciones_coloquios_fechas_academicas.py
backend/app/: main.py
backend/app/core/: audit.py  config.py  database.py  dependencies.py  exceptions.py  logging.py  observability.py  permissions.py  redis_client.py  security.py  tenancy.py
backend/app/domain/: aprobado.py  atrasados.py
backend/app/integrations/: moodle_ws.py
backend/app/models/: __init__.py  asignacion.py  audit_log.py  aviso.py  base.py  calificacion.py  comunicacion.py  encuentro.py  estructura.py  evaluacion.py  guardia.py  liquidacion.py  mensajeria.py  padron.py  programa_materia.py  rbac.py  tarea.py  tenant.py  tenant_moodle_config.py  user.py
backend/app/repositories/: analisis_repository.py  asignacion_repository.py  audit_log_repository.py  auditoria_repository.py  aviso_repository.py  base.py  calificacion_repository.py  comunicacion_repository.py  encuentro_repository.py  estructura_repository.py  evaluacion_repository.py  fecha_academica_repository.py  guardia_repository.py  inbox_repository.py  liquidacion_repository.py  moodle_config_repository.py  padron_repository.py  programa_materia_repository.py  rbac_repository.py  tarea_repository.py  umbral_repository.py  user_repository.py  usuario_repository.py
backend/scripts/: nullify_totp_dev.py  seed.py
backend/tests/: conftest.py  test_app_startup.py  test_config.py  test_database.py  test_health.py
(+441 files in other folders)
